<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_fa">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <AutoCompleteTextView
            android:hint="@string/disponibilidad_fa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/disponibilidad_fa"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_fa">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar_fa" android:layout_marginTop="8dp"/>


</LinearLayout>