<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment" android:orientation="vertical" android:gravity="center"
        android:backgroundTint="#B2E0F9"
        android:background="@color/black" android:clickable="true" android:focusable="true">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.266"
            android:textStyle="bold" android:textSize="30sp"
            android:id="@+id/textView" android:textColor="@color/black"/>
    <Button
            android:text="@string/iniciar_sesion"
            android:layout_width="175dp"
            android:layout_height="54dp" android:id="@+id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.114"
            android:backgroundTint="#44AA47" android:textColor="#000000"
            android:textSize="16sp" app:layout_constraintTop_toBottomOf="@+id/outlinedTextField1"/>
    <Button
            android:text="@string/sesion_google"
            android:layout_width="175dp"
            android:layout_height="54dp" android:id="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.83"
            android:backgroundTint="#E87272" android:textColor="#000000"
            app:icon="@drawable/google" app:iconTintMode="multiply" app:iconSize="25dp" app:iconPadding="0dp"
            app:iconTint="@null" android:textSize="16sp" app:layout_constraintHorizontal_bias="0.504"/>
    <Button
            android:text="@string/sesion_facebook"
            android:layout_width="175dp"
            android:layout_height="54dp" android:id="@+id/button3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.175"
            android:backgroundTint="#6474CD" android:textColor="#000000"
            app:icon="@drawable/pngegg" app:iconTintMode="multiply" app:iconSize="40dp" app:iconPadding="0dp"
            app:iconTint="@null" android:textSize="16sp" app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.502"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_contrasenya"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintVertical_bias="0.0"
            app:boxStrokeColor="#146517"
            app:startIconTint="@color/design_default_color_secondary_variant"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintHorizontal_bias="0.4"
            app:hintTextColor="#292727"
            app:endIconTint="#009688"
            app:cursorColor="#05834C"
            android:textColorHint="#99353239"
            app:helperText="@string/login_contrasenya_helper"
            app:helperTextTextColor="#B2E0F9"
            app:errorTextColor="#FB0E00">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#2E2929"
                android:textColor="@color/black"
                android:id="@+id/campo_contrasenya"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_usuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintVertical_bias="0.118"
            app:boxStrokeColor="#146517"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintHorizontal_bias="0.4"
            app:cursorColor="#05834C"
            app:hintTextColor="#292727"
            android:textColorHint="#99353239"
            app:helperTextEnabled="true"
            app:helperText="@string/login_correo_helper"
            app:helperTextTextColor="#B2E0F9"
            app:errorTextColor="#FB0E00">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#353333"
                android:textColor="@color/black"
                android:id="@+id/campo_correo"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:layout_width="205dp"
            android:layout_height="160dp" app:srcCompat="@drawable/am" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/no_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/no_cuenta"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.225" android:textSize="14sp" android:textColor="#045111"
            android:linksClickable="true"/>
    <TextView
            android:text="@string/iniciar_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:textSize="16sp" android:textColor="@color/black" app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintBottom_toTopOf="@+id/button2"/>
    <TextView
            android:text="@string/sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/outlinedTextField2"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintVertical_bias="0.8" android:textColor="#000000" android:textSize="16sp"/>
    <TextView
            android:text="@string/no_recordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/no_recordar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" android:textColor="#1647DA"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField1" android:textSize="14sp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>