<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.RegisterFragment"
        android:id="@+id/registerLayout"
        android:orientation="vertical" android:gravity="center"
        android:backgroundTint="#B2E0F9"
        android:background="@color/black" android:clickable="true" android:focusable="true">

    <TextView
            android:text="@string/sing_up_ra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.061"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    <ImageView
            android:layout_width="119dp"
            android:layout_height="105dp"
            app:srcCompat="@drawable/msn_disponible"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.053" android:contentDescription="@string/cambiar_img_ra"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#146517"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cursorColor="#05834C"
            app:hintTextColor="#292727"
            android:textColorHint="#99353239"
            app:helperTextEnabled="true"
            app:helperText="@string/login_correo_helper"
            app:helperTextTextColor="#B2E0F9"
            app:errorTextColor="#FB0E00"
            android:id="@+id/correo_electronico_ra"
            app:layout_constraintVertical_bias="0.009"
            app:layout_constraintTop_toBottomOf="@+id/nombre_usuario_ra">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_usuario"
                android:textColorHint="#353333"
                android:textColor="@color/black"
                android:id="@+id/campo_correo_ra"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/clave_ra"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_contrasenya"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/correo_electronico_ra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#146517"
            app:startIconTint="@color/design_default_color_secondary_variant"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="128dp"
            app:layout_constraintVertical_bias="0.019"
            app:hintTextColor="#292727"
            app:endIconTint="#009688"
            app:cursorColor="#05834C"
            android:textColorHint="#99353239"
            app:helperText="@string/login_contrasenya_helper"
            app:helperTextTextColor="#B2E0F9"
            app:errorTextColor="#FB0E00">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/campo_clave_ra"
                android:inputType="textPassword"
                android:textColorHint="#353333"
                android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/date_ra"
            app:layout_constraintTop_toBottomOf="@+id/btn_date_ra" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.092"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/date_ra"/>
    <Button
            android:text="@string/registrarse_ra"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.141"
            android:backgroundTint="#44AA47"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/date_ra"
            android:id="@+id/registrarse_ra"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <TextView
            android:text="@string/iniciar_sesion_rf"
            android:textColor="#000750"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/texto_iniciar_sesion"
            app:layout_constraintTop_toBottomOf="@+id/registrarse_ra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintHorizontal_bias="0.503" android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/nombre_usuario_ra"
            app:cursorColor="#05834C"
            app:boxStrokeColor="#146517"
            app:hintTextColor="#292727"
            android:textColorHint="#99353239"
            app:boxBackgroundColor="@color/white"
            app:errorTextColor="#FB0E00"
            app:helperText="@string/login_correo_helper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.072"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:helperTextTextColor="#B2E0F9"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname_ra"
                android:textColorHint="#353333"
                android:textColor="@color/black"
                android:id="@+id/campo_usuario_ra"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/cambiar_img_ra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cambiar_img_ra"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"/>
    <Button
            android:text="@string/btn_date_ra"
            android:id="@+id/btn_date_ra"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:backgroundTint="#3F51B5"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/clave_ra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"
    />
</androidx.constraintlayout.widget.ConstraintLayout>