<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="22dp"
        app:cardBackgroundColor="#D1E4B5"
        app:cardCornerRadius="30dp"
        android:layout_margin="10dp"
        app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:id="@+id/layout_item"
            android:layout_margin="12dp">
        <TextView
                android:text="@string/nombre_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nombre_rv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/estado_rv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.352"
                android:layout_marginStart="10dp" android:textColor="@color/black"/>
        <TextView
                android:text="@string/estado_rv"
                android:layout_width="181dp"
                android:layout_height="39dp"
                android:id="@+id/estado_rv"
                app:layout_constraintStart_toStartOf="@+id/nombre_rv" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.848"
                android:textColor="@color/black"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:src="@drawable/fav_unselected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/boton_fav"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/favorito_rv"
                android:focusable="true"
                app:backgroundTint="@color/white" android:tint="@color/black" android:foregroundTint="@color/black"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_launcher_foreground"
                android:id="@+id/foto_rv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/imagen_rv" android:foregroundGravity="left"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/disponibilidad_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/disponibilidad_rv"
                app:layout_constraintEnd_toStartOf="@+id/boton_fav" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nombre_rv" app:layout_constraintHorizontal_bias="0.206"
                app:layout_constraintVertical_bias="0.2" android:layout_marginStart="5dp"
                android:textColor="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>